<resources>
    <string name="app_name">AndroidCurs07</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="login_text">To log into demo account, enter \ne-mail \"demo\" \npassword \"demo\"
    </string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="previous"><![CDATA[<< Previous]]></string>
    <string name="next"><![CDATA[Next >>]]></string>
    <string name="birthYear">Год рождения</string>
    <string name="owner">Хозяин</string>
    <string name="name">Имя</string>
    <string name="account_demo_name">Gomer Simpson</string>
    <string name="exit">Выход</string>
</resources>